--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -99,6 +99,10 @@ body {
         line-height: 1.75;
         color: $font-color;
 
+        #results-header {
+          display: none;
+        }
+
         #results-title,
         p,
         #win {
@@ -190,7 +194,6 @@ body {
           opacity: 0.7;
           border-radius: 5px 5px 5px 5px;
           background-color: $green;
-          // transition: width 1s ease;
         }
       }
     }
